--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node -e \"console.log('open browser at http://localhost:8081/vr/\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
+    "start":
+      "node -e \"console.log('open browser at http://localhost:8081/vr/\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
     "bundle": "node node_modules/react-vr/scripts/bundle.js",
     "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
     "devtools": "react-devtools",
@@ -32,7 +33,7 @@
     "@types/react": "^16.0.40",
     "@types/react-native": "^0.52.19",
     "babel-eslint": "^8.2.2",
-    "babel-jest": "^19.0.0",
+    "babel-jest": "22.4.3",
     "babel-preset-react-native": "^1.9.1",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -40,7 +41,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^19.0.2",
+    "jest": "22.4.3",
     "prettier": "^1.11.1",
     "react-devtools": "^2.5.2",
     "react-test-renderer": "16.0.0",
@@ -57,13 +58,7 @@
     "transform": {
       "^.+\\.[jt]sx?$": "<rootDir>/jest/preprocessor.js"
     },
-    "testMatch": [
-      "<rootDir>/src/**/*.test.{ts,tsx}"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ]
+    "testMatch": ["<rootDir>/src/**/*.test.{ts,tsx}"],
+    "moduleFileExtensions": ["ts", "tsx", "js"]
   }
 }
