--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start":
-      "node -e \"console.log('open browser at http://localhost:8081/vr/\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
+    "start": "node -e \"console.log('open browser at http://localhost:8081/vr/\\n\\n');\" && node node_modules/react-native/local-cli/cli.js start",
     "bundle": "node node_modules/react-vr/scripts/bundle.js",
     "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
     "devtools": "react-devtools",
@@ -30,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
+    "@types/ramda": "^0.25.20",
     "@types/react": "^16.0.40",
     "@types/react-native": "^0.52.19",
     "babel-eslint": "^8.2.2",
@@ -58,7 +58,13 @@
     "transform": {
       "^.+\\.[jt]sx?$": "<rootDir>/jest/preprocessor.js"
     },
-    "testMatch": ["<rootDir>/src/**/*.test.{ts,tsx}"],
-    "moduleFileExtensions": ["ts", "tsx", "js"]
+    "testMatch": [
+      "<rootDir>/src/**/*.test.{ts,tsx}"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
